ribit-ssa/src/snapshots/ribit_ssa__opt__test__jal_basic_die.snap
---
source: ribit-ssa/src/opt.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
x(%0)4 = 00000004
ret 00000000, 00001000
