ribit-ssa/src/snapshots/ribit_ssa__opt__test__max_opt_bf_bb_1.snap
---
source: ribit-ssa/src/opt.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
%2 = x(%0)2
%3 = add %2, 00000000
%4 = and %3, 00ffffff
%5 = x(%0)11
m(%1)%4 = byte %5
%6 = x(%0)12
%7 = add %6, 00000000
x(%0)2 = %7
x(%0)1 = 0001002c
x(%0)6 = 00010024
ret 00000000, 00010190
