ribit-ssa/src/snapshots/ribit_ssa__opt__test__mem_read_write_all_opts.snap
---
source: ribit-ssa/src/opt.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = add %2, 00000000
%4 = and %3, 00ffffff
%5 = signed dword m(%1)%4
%6 = add %5, 00000064
x(%0)2 = %6
%7 = add %6, 00000032
%8 = and %7, 00ffffff
m(%1)%8 = dword %2
ret 00000001, 00000010
